--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- Wczytujemy pierwszy slajd wcześniej, żeby hero szybciej się pojawił -->
-  <link rel="preload" as="image" href="obrazy/slide1.webp" fetchpriority="high">
-  <!-- Kod weryfikacyjny Google (Search Console). -->
-  <meta name="google-site-verification" content="mNdWz9KpZc_3eCyJSfgT96xnFP2UdR9cDoxjLSyjjV4" />
-  <!-- Ustawienia szerokość widoku -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Tytuł strony -->
-  <title>RoboInvest – Świadoma automatyzacja i robotyzacja produkcji</title>
-
   
+  <!-- Wczytuje pierwszy slajd wcześniej, żeby hero szybciej się pojawił -->
+  <link rel="preload" as="image" href="obrazy/slide1.webp" fetchpriority="high">
+
   <!-- Czcionka z Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  
+  <!-- Ustawienia szerokość widoku -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Tytuł strony -->
+  <title>RoboInvest – Świadoma automatyzacja i robotyzacja produkcji</title>
   
   <!-- Favicon's -->
   <link rel="icon" type="image/png" href="/favicon/logo-96x96.png" sizes="96x96" />
@@ -42,7 +42,10 @@
   <link rel="canonical" href="https://roboinvest.pl/">
 
   <!-- SEO - meta name -->
-  <meta name="description" content="Zarządzanie projektami w automatyzacji i robotyzacji produkcji. Wdrażamy rozwiązania z robotyki przemysłowej, automatyki i cyfryzacji procesów.">
+  <meta name="description" content="Zarządzanie projektami w automatyzacji i robotyzacji produkcji. Wdrażamy rozwiązania z zakresu robotyki przemysłowej, automatyki i cyfryzacji procesów.">
+
+  <!-- Kod weryfikacyjny Google (Search Console). -->
+  <meta name="google-site-verification" content="mNdWz9KpZc_3eCyJSfgT96xnFP2UdR9cDoxjLSyjjV4" />
 
 <style>
 
