Ręczny wybór plików do publikacji

--- a/index.html
+++ b/index.html
@@ -1069,10 +1069,13 @@ document.addEventListener('DOMContentLoaded', function () {
       "review": [
         {
           "@type": "Review",
-          "author": "Klient przemysłowy",
+          "author": {
+			"@type": "Organization",
+			"name": "Diał Utrzymania Ruchu"
+					},
           "datePublished": "2025-10-15",
-          "reviewBody": "Wysokiej klasy wsparcie w zakresie automatyzacji i odbiorów FAT/SAT. RoboInvest skutecznie reprezentowało nasz interes podczas całego projektu inwestycyjnego.",
-          "name": "Pełna obsługa projektu inwestycyjnego",
+          "reviewBody": "Wysokiej klasy wsparcie w zakresie automatyzacji i odbiorów FAT/SAT. RoboInvest skutecznie reprezentował nasz interes podczas całego procesu odbiorowego.",
+          "name": "Pełna obsługa procesu odbiorowego",
           "reviewRating": {
             "@type": "Rating",
             "ratingValue": "5",
@@ -1082,9 +1085,12 @@ document.addEventListener('DOMContentLoaded', function () {
         },
         {
           "@type": "Review",
-          "author": "Dział inżynieryjny klienta",
+		  "author": {
+			"@type": "Organization",
+			"name": "Dział inżynieryjny"
+					},
           "datePublished": "2025-09-30",
-          "reviewBody": "Profesjonalne podejście do zarządzania projektem. Świetna komunikacja i terminowość.",
+          "reviewBody": "Wysoki poziom profesjonalizmu w zarządzaniu projektem i świetne wyczucie realnych potrzeb produkcji i biznesu.",
           "name": "Nadzór projektowy",
           "reviewRating": {
             "@type": "Rating",
