--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@ document.addEventListener('DOMContentLoaded', function () {
           "@type": "Review",
           "author": {
 			"@type": "Organization",
-			"name": "Diał Utrzymania Ruchu"
+			"name": "Dział Utrzymania Ruchu"
 					},
           "datePublished": "2025-10-15",
           "reviewBody": "Wysokiej klasy wsparcie w zakresie automatyzacji i odbiorów FAT/SAT. RoboInvest skutecznie reprezentował nasz interes podczas całego procesu odbiorowego.",
