Poprawki og:image pod Google

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   <link rel="manifest" href="/site.webmanifest" />
   
   <!-- SEO OpenGraph -->
-  <meta property="og:title" content="RoboInvest – Pomagamy wdrażać rozwiązania z zakresu robotyki przemysłowej, automatyki i optymalizacji produkcji. Zarządzanie projektami inwestycyjnymi w automatyzację i robotyzację">
-  <meta property="og:description" content="Automatyzacja, robotyzacja, FAT/SAT, audyty maszyn, URS, bezpieczeństwo maszyn.">
+  <meta property="og:title" content="RoboInvest – Pomagamy wdrażać rozwiązania z zakresu robotyki przemysłowej, automatyki i cyfryzacji procesów.">
+  <meta property="og:description" content="Zarządzanie projektami inwestycyjnymi w automatyzację i robotyzację">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://roboinvest.pl/favicon/logo.svg">
+  <meta property="og:image" content="https://roboinvest.pl/obrazy/roboinvest-og.png">
   <meta property="og:url" content="https://roboinvest.pl/">
   <meta name="twitter:card" content="summary_large_image">
   
