--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
   <title>RoboInvest – Świadoma automatyzacja i robotyzacja produkcji</title>
   
   <!-- Favicon's -->
-  <link rel="icon" type="image/png" href="/favicon/logo-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/favicon/logo.svg" />
-  <link rel="shortcut icon" href="/favicon/logo.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="RoboInvest" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="apple-mobile-web-app-title" content="RoboInvest">
   
   <!-- SEO OpenGraph -->
   <meta property="og:title" content="RoboInvest – Pomagamy wdrażać rozwiązania z zakresu robotyki przemysłowej, automatyki i cyfryzacji procesów.">
@@ -517,9 +515,11 @@ body { margin: 0; font-family: 'Roboto', sans-serif; color: #222; background-col
   "@graph": [
     {
       "@type": "Organization",
+      "@id": "https://roboinvest.pl/#organization",
       "name": "RoboInvest",
       "url": "https://roboinvest.pl/",
-      "logo": "https://roboinvest.pl/favicon/logo.svg",
+      "logo": "https://roboinvest.pl/obrazy/roboinvest-org.png",
+      "image": "https://roboinvest.pl/obrazy/roboinvest-org.png",
       "email": "biuro.roboinvest@gmail.com",
       "telephone": "+48 531 402 009",
       "description": "RoboInvest – specjalizujemy się w zarządzaniu projektami inwestycyjnymi w automatyzację i robotyzację produkcji. Wspieramy inwestorów na każdym etapie cyklu projektu – od opracowania URS i specyfikacji dla maszyn, przez analizy, audyty, Design Review, Project Review, Design Freeze, kwalifikacje IQ/OQ/PQ, po odbiory FAT/SAT i zapewnienie bezpieczeństwa maszyn zgodnie z Rozporządzeniem 2023/1230 (dawna Dyrektywa Maszynowa 2006/42/WE).",
@@ -528,76 +528,55 @@ body { margin: 0; font-family: 'Roboto', sans-serif; color: #222; background-col
       ],
       "makesOffer": [
         {
-          "@type": "Service",
-          "name": "Zarządzanie projektami inwestycyjnymi w automatyzację i robotyzację produkcji",
-          "description": "Kompleksowe zarządzanie projektami inwestycyjnymi w obszarze automatyzacji i robotyzacji – planowanie, budżetowanie, nadzór techniczny, koordynacja dostawców, nadzór nad FAT/SAT i bezpieczeństwem maszyn.",
-          "areaServed": "Polska"
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Zarządzanie projektami inwestycyjnymi w automatyzację i robotyzację produkcji",
+            "description": "Kompleksowe zarządzanie projektami inwestycyjnymi w obszarze automatyzacji i robotyzacji – planowanie, budżetowanie, nadzór techniczny, koordynacja dostawców, nadzór nad FAT/SAT i bezpieczeństwem maszyn.",
+            "areaServed": "PL"
+          },
+          "areaServed": "PL"
         },
         {
-          "@type": "Service",
-          "name": "Odbiory FAT / SAT",
-          "description": "Wsparcie techniczne, dokumentacyjne i merytoryczne podczas odbiorów fabrycznych (FAT) i odbiorów końcowych (SAT) dla projektów przemysłowych."
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Odbiory FAT / SAT",
+            "description": "Wsparcie techniczne, dokumentacyjne i merytoryczne podczas odbiorów fabrycznych (FAT) i odbiorów końcowych (SAT) dla projektów przemysłowych.",
+            "areaServed": "PL"
+          },
+          "areaServed": "PL"
         },
         {
-          "@type": "Service",
-          "name": "Audyty i bezpieczeństwo maszyn",
-          "description": "Analizy oraz raporty według norm PN-EN ISO. Weryfikacja zabezpieczeń i systemów bezpieczeństwa."
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Audyty i bezpieczeństwo maszyn",
+            "description": "Analizy oraz raporty według norm PN-EN ISO. Weryfikacja zabezpieczeń i systemów bezpieczeństwa.",
+            "areaServed": "PL"
+          },
+          "areaServed": "PL"
         },
         {
-          "@type": "Service",
-          "name": "Dokumentacja techniczna i URS",
-          "description": "Opracowanie Specyfikacji Wymagań Użytkownika (URS) oraz dokumentacji projektowej i kwalifikacyjnej (IQ/OQ/PQ) zgodnie z wymaganiami GMP i normami zharmonizowanymi."
-        }
-      ],
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "5.0",
-        "reviewCount": "14",
-        "bestRating": "5",
-        "worstRating": "1"
-      },
-      "review": [
-        {
-          "@type": "Review",
-          "author": {
-			"@type": "Organization",
-			"name": "Dział Utrzymania Ruchu"
-					},
-          "datePublished": "2025-10-15",
-          "reviewBody": "Wysokiej klasy wsparcie w zakresie automatyzacji i odbiorów FAT/SAT. RoboInvest skutecznie reprezentował nasz interes podczas całego procesu odbiorowego.",
-          "name": "Pełna obsługa procesu odbiorowego",
-          "reviewRating": {
-            "@type": "Rating",
-            "ratingValue": "5",
-            "bestRating": "5",
-            "worstRating": "1"
-          }
-        },
-        {
-          "@type": "Review",
-		  "author": {
-			"@type": "Organization",
-			"name": "Dział inżynieryjny"
-					},
-          "datePublished": "2025-09-30",
-          "reviewBody": "Wysoki poziom profesjonalizmu w zarządzaniu projektem i świetne wyczucie realnych potrzeb produkcji i biznesu.",
-          "name": "Nadzór projektowy",
-          "reviewRating": {
-            "@type": "Rating",
-            "ratingValue": "5",
-            "bestRating": "5",
-            "worstRating": "1"
-          }
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Dokumentacja techniczna i URS",
+            "description": "Opracowanie Specyfikacji Wymagań Użytkownika (URS) oraz dokumentacji projektowej i kwalifikacyjnej (IQ/OQ/PQ) zgodnie z wymaganiami i normami zharmonizowanymi.",
+            "areaServed": "PL"
+          },
+          "areaServed": "PL"
         }
       ]
     },
     {
       "@type": "LocalBusiness",
+      "@id": "https://roboinvest.pl/#localbusiness",
       "name": "RoboInvest",
-      "image": "https://roboinvest.pl/favicon/logo.svg",
       "url": "https://roboinvest.pl/",
-      "email": "biuro.roboinvest@gmail.com",
+      "image": "https://roboinvest.pl/obrazy/roboinvest-org.png",
       "telephone": "+48 531 402 009",
+      "email": "biuro.roboinvest@gmail.com",
       "priceRange": "$$",
       "address": {
         "@type": "PostalAddress",
@@ -610,7 +589,10 @@ body { margin: 0; font-family: 'Roboto', sans-serif; color: #222; background-col
         "latitude": 51.107883,
         "longitude": 17.038538
       },
-      "areaServed": "Polska"
+      "areaServed": "PL",
+      "parentOrganization": {
+        "@id": "https://roboinvest.pl/#organization"
+      }
     }
   ]
 }
