--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <title>RoboInvest – Świadoma automatyzacja i robotyzacja produkcji</title>
   
   <!-- Favicon's -->
-  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="any">
   <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   <meta name="apple-mobile-web-app-title" content="RoboInvest">
